--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
 
-integration_spreadsheet_key: 1ip5uFxrzQA5lQbWPr4mYDWcGgGMwVUObp6WuD5hRYmI
+integration_spreadsheet_key: 2PACX-1vSgcU2cweF0DbGvnZmDqzGDuNEHYcj1P2skLSJUaki51zuActn-McpuekvjRJgQAeXVLr1b89uUWF1h
 
-github_user: hack-education-data
-github_repo: emerson-collective
+github_user: ironsharks
+github_repo: quotes2
